release 1.14
- Fixed issue 1259
  http://java.net/jira/browse/JERSEY-1259
  Array out of bounds error when you specify an empty list of @Produces annotation
release 1.13
- Fixed regression in EJB dispatching. Original GlassFish issue 16199
  http://java.net/jira/browse/GLASSFISH-16199
  IllegalArgumentException: object is not an instance of declaring class - on a REST / EJB Service
  This was broken again after Servlet stuff was separated out from the jersey-server module
- Fixed issue 1225
  http://java.net/jira/browse/JERSEY-1225
  Javadoc for JerseyTest is out of date
- Fixed issue 1124
  http://java.net/jira/browse/JERSEY-1124
  ServiceFinder not returning services in META-INF/services
- Fixed issue 1228
  http://java.net/jira/browse/JERSEY-1228
  Add Vary header in GZIPContentEncodingFilter, other improvements wrt. GZIP encoding vs. ETags
- Fixed issue 1220
  http://java.net/jira/browse/JERSEY-1220
  Improved string to object conversion for request parameters.
- Fixed issue 1165
  http://java.net/jira/browse/JERSEY-1165
  Fix failing tests when MOXy is used as the JAXB provider
- Fixed issue 1221
  http://java.net/jira/browse/JERSEY-1221
  Helloworld OSGi WebApp won't build under Java7
- Fixed issue 1219
  http://java.net/jira/browse/JERSEY-1219
  Added ResourceContext binding to Guice
- Fixed issue 1200
  http://java.net/jira/browse/JERSEY-1200
  Extracting Form parameters when consumed by filters was specific to POST method. Now it works for PUT and other methods as well.
- Fixed issue 1057
  http://java.net/jira/browse/JERSEY-1057
  SAXParserContextProvider fail inconsistenly for missing XML parser features
- Fixed issue 1199
  http://java.net/jira/browse/JERSEY-1199
  Incorrect JSON serialization of xsi:type when preceding object ends with an array property
- Improved handling of external XML entities
- Fixed issue 1198
  http://java.net/jira/browse/JERSEY-1198